--- a/app/design/frontend/base/default/template/rewards/checkout/rewardspent.phtml
+++ b/app/design/frontend/base/default/template/rewards/checkout/rewardspent.phtml
@@ -44,7 +44,7 @@
 ?>
 <?php if ($this->showSpendings()): ?>
     <tr>
-        <td class="a-right cart-points-total_spent" colspan="<?php echo $this->getColspan(); ?>">          
+        <td class="a-right cart-points-total_spent" colspan="4">          
             <div class="caption"><?php echo $this->__('You Will Spend:') ?></div>
         </td>
         <td class="a-right cart-points-total_spent"> 
