--- a/app/design/frontend/default/default/template/facebook/init.phtml
+++ b/app/design/frontend/default/default/template/facebook/init.phtml
@@ -1,24 +1,34 @@
+<?php
+/**
+ * @category    Inchoo
+ * @package     Inchoo_Facebook
+ * @author      Ivan Weiler <ivan.weiler@gmail.com>
+ * @copyright   Inchoo (http://inchoo.net)
+ * @license     http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+?>
 <!-- BEGIN Inchoo Facebook Connect -->
 <div id="fb-root"></div>
 <script type="text/javascript">
 //<![CDATA[
 window.fbAsyncInit = function() {
 	FB.init({
-		appId  : <?php echo json_encode($this->getApiKey()) ?>,
-		status : true, // check login status
-		cookie : true, // enable cookies to allow the server to access the session
-		xfbml  : true,  // parse XFBML
-		channelUrl : '<?php echo $this->getChannelUrl() ?>'  // custom channel
+		appId		: <?php echo json_encode($this->getApiKey()) ?>,
+		channelUrl	: '<?php echo $this->getChannelUrl() ?>',
+		status		: true,
+		cookie		: true,
+		oauth		: true,
+		xfbml		: true
 	});
-	Event.fire(window, "facebook:fbAsyncInit");
+	document.fire("facebook:fbAsyncInit");
 };
 
-(function() {
-	var e = document.createElement('script');
-	e.src = document.location.protocol + '//connect.facebook.net/<?php echo $this->getLocale() ?>/all.js';
-	e.async = true;
-	document.getElementById('fb-root').appendChild(e);
-}());
+(function(d){
+	var js, id = 'facebook-jssdk'; if (d.getElementById(id)) {return;}
+	js = d.createElement('script'); js.id = id; js.async = true;
+	js.src = "//connect.facebook.net/<?php echo $this->getLocale() ?>/all.js";
+	d.getElementsByTagName('head')[0].appendChild(js);
+}(document));
 
 document.observe('click', function(e){
 	var target = e.findElement('a[rel^=facebook-connect]') || e.findElement('button[rel^=facebook-connect]');
@@ -27,7 +37,7 @@ document.observe('click', function(e){
 		try{
 			FB.login(function(response){
 				if(response.status=='connected') setLocation('<?php echo $this->getConnectUrl() ?>');
-			}, {perms:<?php echo $this->getRequiredPermissions() ?>});
+			}, {scope: <?php echo $this->getRequiredPermissions() ?>});
 		}catch(error){}
 	}
 });
