--- a/app/design/frontend/default/default/template/facebook/login.phtml
+++ b/app/design/frontend/default/default/template/facebook/login.phtml
@@ -1,4 +1,12 @@
-<?php /* placing this rooja 
+<?php
+/**
+ * @category    Inchoo
+ * @package     Inchoo_Facebook
+ * @author      Ivan Weiler <ivan.weiler@gmail.com>
+ * @copyright   Inchoo (http://inchoo.net)
+ * @license     http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ */
+?>
 <br />
 <div class="account-login facebook-login">
     <div class="page-title">
@@ -14,4 +22,4 @@
 		<button rel="facebook-connect" type="button" title="<?php echo $this->__('Connect with Facebook') ?>" class="button"><span><span><?php echo $this->__('Connect with Facebook') ?></span></span></button>
 	</div>
 
-</div> */ ?>
+</div>
