--- a/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
+++ b/app/design/frontend/base/default/template/onestepcheckout/checkout.phtml
@@ -10,7 +10,7 @@ $helper = Mage::helper('onestepcheckout/checkout');
 	
 $(".payment-methods input").live('change', function() {
 	
-	if($('#p_method_cashondelivery').is(':checked')) { 
+	if($('#p_method_ig_cashondelivery').is(':checked')) { 
 		$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-8080622277 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders. <br><br>The maximum limit for a COD order is Rs 20,000 outside of New Delhi and Gurgaon.');
 		$("#hintImg").html('<img src="<?php echo $this->getSkinUrl('images/cod.png'); ?>" alt="Security" id="secureLogos">');
 	}
