--- a/app/design/frontend/default/rooja/template/ig_cashondelivery/form.phtml
+++ b/app/design/frontend/default/rooja/template/ig_cashondelivery/form.phtml
@@ -7,11 +7,12 @@ $_extra_fee_incl = $this->getQuote()->getStore()->convertPrice(Mage::helper('tax
 ?>
 <fieldset class="form-list">
 	<ul id="payment_form_<?php echo $_code ?>" style="display:none;">
+		<?php if($_extra_fee_excl > 0 && $_extra_fee_excl != null) {?>
 		<li>
 			<?php echo $this->__('You will be charged an extra fee of %s', $_extra_fee_excl) ?>
 			<?php if ($this->helper('tax')->displayShippingBothPrices() && ($_extra_fee_incl != $_extra_fee_excl)) { ?>
 				(<?php echo $this->__('Incl. Tax'); ?> <?php echo $_extra_fee_incl; ?>)
 			<?php } ?>
-		</li>
+		</li><?php } ?>
 	</ul>
 </fieldset>
