--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -30,7 +30,7 @@
 <?php
 function timeBetweenNowAndDeadline($deadline) {
     //$deadline = strtotime($deadline);
-/*	$currentDate = date("U");
+	$currentDate = date("U");
     $diff = $deadline-$currentDate;
     $seconds = 0;
     $hours   = 0;
@@ -80,7 +80,7 @@ function timeBetweenNowAndDeadline($deadline) {
 	else{
 		return $days.''.$hours;	
 	}
-    */
+    
 }
 
 ?>
