--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -153,7 +153,7 @@
 	</div>
 	</form>
 	<br/>
-	<p>Having trouble? Email us at <a href="mailto:support@rooja.in">support@rooja.in</a>TEST one</p>
+	<p>TEST Having trouble? Email us at <a href="mailto:support@rooja.in">support@rooja.in</a></p>
 	</div>
 	<div style="display:none" id="getInvitedCont">
 	<h2 id="earlyAccess" class="tr">Become a Member</h2>
