--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -164,7 +164,7 @@
 	</div>	
 </section><!--End Content-->
 </div>
-<!--	<section id="brands">
+	<section id="brands">
 		<ul class="slideshow">
 			<li><img src="<?php echo $this->getSkinUrl('images/splash/header/international-brands.png') ?>" alt="International Brands"></li>
 			<li><img src="<?php echo $this->getSkinUrl('images/splash/header/great-value.png') ?>" alt="Great Value"></li>
@@ -173,5 +173,5 @@
 			<li><img src="<?php echo $this->getSkinUrl('images/splash/header/free-returns.png') ?>" alt="Free Returns"></li>
 			<li><img src="<?php echo $this->getSkinUrl('images/splash/header/cash-on-delivery.png') ?>" alt="Cash on Delivery"></li>
 		</ul>
-	</section> -->
+	</section> 
 </div>
