--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -36,21 +36,52 @@
 <?php 
 $i = 0;
 $categories = Mage::helper('catalog/category')->getStoreCategories();
-foreach ($categories as $_category){
-    if($_category->hasChildren()){
+foreach ($categories as $_category)
+{
+    if($_category->hasChildren())
+	{
         $_category->getId(); // category id
-		if($_category->getId() !=5){
-        foreach($_category->getChildren() as $subcategory){
-		$c = Mage::getModel('catalog/category')->load($subcategory->getId());
-            if($c->getIsActive()){ // check if category is active
+		if($_category->getId() !=5)
+		{
+        foreach($_category->getChildren() as $subcategory)
+		{
+			
+		$c = Mage::getModel('catalog/category')->load($subcategory->getId()); 
+		
+		//code for current user gender get
+		$session = Mage::getSingleton('customer/session'); 
+		$customer = $session->getCustomer();
+		if($customer['gender']=='1')
+		{
+			$gender='1';
+			$category_id='4';
+		}
+		else if($customer['gender']=='2')
+		{
+			$gender='2';
+			$category_id='58';
+		}
+		
+		//Filter the data's gender wise with category
+		if($customer['gender']==$gender && $c['parent_id']==$category_id)
+		{ 
+
+		
+            
+			if($c->getIsActive())
+			{ // check if category is active
 				$fivedays = strtotime(date('y-m-d H:G:00', strtotime("+2 days")));
 				$today = strtotime(date('y-m-d H:i:s'));
-				if (!$c->getSale_start_date() == null) {
+				if (!$c->getSale_start_date() == null) 
+				{
 	                $startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
 					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
-					if(timeBetweenNowAndDeadline($enddate) != 0){
-					if (($enddate > $today && $enddate < $fivedays && $startdate < $today) || ($enddate > $today && $enddate > $fivedays && $startdate < $today)) {
-						if($i == 3){
+					if(timeBetweenNowAndDeadline($enddate) != 0)
+					{
+					if (($enddate > $today && $enddate < $fivedays && $startdate < $today) || ($enddate > $today && $enddate > $fivedays && $startdate < $today)) 
+					{
+						if($i == 3)
+						{
 							?>
 							<article class="homeAd2 fl masonry">
 								<a href="/rewardsref/customer/index/"><img src="<?php echo $this->getSkinUrl('images/graphics/spreadthelove3.jpg'); ?>" alt="Invite Friends and get cash" /></a>
@@ -68,7 +99,16 @@ foreach ($categories as $_category){
                 <h2<?php if($i%2==1) echo " class='blackBg'"; ?>><?php echo $c->getName(); ?></h2>
 				<p>Sale ends in <?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
-				<?php } $i++; }}}}}}  }} ?>			
+				<?php } $i++; 
+				}
+				}
+				}
+				}
+				}
+				} 
+				}
+				} 
+				}?>			
 
 
 <script type="text/javascript">
