--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -35,18 +35,25 @@
 
 <?php 
 $i = 0;
-$categories = Mage::helper('catalog/category')->getStoreCategories();
-foreach ($categories as $_category)
-{
+$categories = Mage::helper('catalog/category')->getStoreCategories(); 
+
+foreach ($categories as $_category) 
+{ 
+
     if($_category->hasChildren())
 	{
-        $_category->getId(); // category id
+
+        $_category->getId(); // category id  
+		
 		if($_category->getId() !=5)
-		{
+		{  
+				
         foreach($_category->getChildren() as $subcategory)
-		{
-			
+		{ 
+		
 		$c = Mage::getModel('catalog/category')->load($subcategory->getId()); 
+		
+		$product_parent_id = $c['parent_id'];
 		
 		//code for current user gender get
 		$session = Mage::getSingleton('customer/session'); 
@@ -61,27 +68,30 @@ foreach ($categories as $_category)
 			$gender='2';
 			$category_id='58';
 		}
-		
-		//Filter the data's gender wise with category
-		if($customer['gender']==$gender && $c['parent_id']==$category_id)
-		{ 
-
-		
-            
-			if($c->getIsActive())
-			{ // check if category is active
+	
+            if($c->getIsActive()) 
+			{ // check if category is active 
+			
+			
 				$fivedays = strtotime(date('y-m-d H:G:00', strtotime("+2 days")));
 				$today = strtotime(date('y-m-d H:i:s'));
 				if (!$c->getSale_start_date() == null) 
 				{
 	                $startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
-					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
+					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00'); 
+					
 					if(timeBetweenNowAndDeadline($enddate) != 0)
 					{
 					if (($enddate > $today && $enddate < $fivedays && $startdate < $today) || ($enddate > $today && $enddate > $fivedays && $startdate < $today)) 
-					{
+					{  
+					
+					
+					//Filter the data's gender wise with category
+					if($customer['gender']==$gender && $product_parent_id==$category_id)
+					{ 
+
 						if($i == 3)
-						{
+						{ 
 							?>
 							<article class="homeAd2 fl masonry">
 								<a href="/rewardsref/customer/index/"><img src="<?php echo $this->getSkinUrl('images/graphics/spreadthelove3.jpg'); ?>" alt="Invite Friends and get cash" /></a>
@@ -92,7 +102,9 @@ foreach ($categories as $_category)
 						
 								<p>Sale ends in <?php echo timeBetweenNowAndDeadline($enddate); ?></p>
 				            </article>
-						<?php } else{ ?>
+				  <?php } 
+						else 
+						{ ?>
              
              <article class="homeSale size2 fl masonry">
                 <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
@@ -100,16 +112,58 @@ foreach ($categories as $_category)
 				<p>Sale ends in <?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
 				<?php } $i++; 
+				}   //gender filter if condition end
+				else{ 
+				
+ 						if($i == 3)
+						{  
+							 
+							$another_catogory[] = '<article class="homeAd2 fl masonry">
+								<a href="/rewardsref/customer/index/"><img src="'.$this->getSkinUrl("images/graphics/spreadthelove3.jpg").'" alt="Invite Friends and get cash" /></a>
+							</article>
+							<article class="homeSale size2 fl masonry">
+				                <a href="'.$c->getURL().'" title="View sale details for:'.$c->getName().'" class="product-image"><img src="/media/catalog/category/'.$c->getThumbnail().'" alt="" width="236px" /></a>
+				                <h2 class="blackBg">'.$c->getName().'</h2>
+						
+								<p>Sale ends in '.timeBetweenNowAndDeadline($enddate).'</p>
+				            </article>';
+				   } 
+						else 
+						{ 
+             
+           $another_catogory[]='<article class="homeSale size2 fl masonry">
+                <a href="'.$c->getURL().'" title="View sale details for:'.$c->getName().'" class="product-image"><img src="/media/catalog/category/'.$c->getThumbnail().'" alt="" width="236px" /></a>
+                <h2';
+                           if($i%2==1){
+                                 $another_catogory[] =   ' class="blackBg"';
+                           }
+                           $another_catogory[] = '>'.$c->getName().'</h2>
+<p>Sale ends in '.timeBetweenNowAndDeadline($enddate).'</p>
+           </article>';
+				 } $i++; 
+			
+				} //gender filter else condition end
+				
+				}
 				}
 				}
 				}
 				}
 				}
 				} 
-				}
-				} 
-				}?>			
+				
+}?>			
+ 
+<?php  
+		//print the home page top colletion for oppsite gender colletion
+		$another_colletions =$another_catogory; 
 
+		foreach($another_colletions as $$var)
+		{
+		echo $$var;
+		}
+
+?>
 
 <script type="text/javascript">
 	jQuery(document).ready(function(){
