task:8 Home page top sales for unspecified gender customers

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -68,7 +68,13 @@ foreach ($categories as $_category)
 			$gender='2';
 			$category_id='58';
 		}
-	
+		else
+		{
+			$gender='2';
+			$category_id='58';
+		}
+		
+
             if($c->getIsActive()) 
 			{ // check if category is active 
 			
