phone number move to bottom of confirmation password

--- a/app/design/frontend/default/rooja/template/customer/form/register.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/register.phtml
@@ -188,6 +188,9 @@ jQuery(function() {
                         </div>
                     </div>
                 </li>
+                
+  <?php echo $this->getLayout()->createBlock('customer/widget_mobile')->setObject($this->getFormData())->toHtml() ?>                
+                
 				<?php $_gender = $this->getLayout()->createBlock('customer/widget_gender') ?>
 	            <?php if ($_gender->isEnabled()): ?>
 	                <li id="gender"><?php echo $_gender->setGender($this->getFormData()->getGender())->toHtml() ?></li>
