purple color for checkout page text instead of blue color

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -856,4 +856,4 @@ a#toggleShipping {font-size:14px; margin: 0 0 0 4px;padding: 5px 0;}
 
 #container_payment_method_cashondelivery fieldset ul{ padding:15px;  }
 
-#checkout_page_custom_text_display{ font-size:13px; color:#2b71c2; margin:15px 0px;    }
+#checkout_page_custom_text_display{ font-size:13px; color:#431f4c; margin:15px 0px;    }
